--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -219,3 +219,18 @@
   journal={Departamento de Ci{\^e}ncia da Computa{\c{c}}{\~a}o do Instituto de Ci{\^e}ncias Exatas da Universidade Federal de Minas Gerais. Belo Horizonte},
   year={2003}
 }
+
+@article{rocha2012mediccao,
+  title={Medi{\c{c}}{\~a}o de software e controle estat{\'\i}stico de processos},
+  author={Rocha, ARC da and Souza, G dos S and Barcellos, MP},
+  journal={Minist{\'e}rio da Ci{\^e}ncia, Tecnologia e Inova{\c{c}}{\~a}o; Secretaria de Pol{\'\i}tica de Inform{\'a}tica},
+  pages={21},
+  year={2012}
+}
+
+@phdthesis{albuquerque2008avaliaccao,
+  title={Avalia{\c{c}}{\~a}o e Melhoria de Ativos de Processos Organizacionais em Ambientes de Desenvolvimento de Software},
+  author={ALBUQUERQUE, Adriano B},
+  year={2008},
+  school={Tese de Doutorado, Universidade Federal do Rio de Janeiro}
+}
