--- a/trabalho1.tex
+++ b/trabalho1.tex
@@ -20,15 +20,16 @@
 \setlength{\epigraphwidth}{0.8\textwidth}
 \input{conteudo/introducao}
 \input{conteudo/objetivos}
-\input{conteudo/metodologia}
-\input{conteudo/abstraction-sheet}
-\input{conteudo/hipotese}
-\input{conteudo/metricas}
-\input{conteudo/plano}
-\input{conteudo/justificativa}
-\input{conteudo/equipe}
-\input{conteudo/eap}
+%\input{conteudo/metodologia}
+%\input{conteudo/abstraction-sheet}
+%\input{conteudo/hipotese}
+%\input{conteudo/metricas}
+%\input{conteudo/plano}
+%\input{conteudo/justificativa}
+%\input{conteudo/eap}
 \input{conteudo/resultados}
+\input{conteudo/conclusao}
+\input{conteudo/equipe}
 
 
 \bookmarksetup{startatroot}
