--- a/conteudo/introducao.tex
+++ b/conteudo/introducao.tex
@@ -1,21 +1,21 @@
 \chapter{Introdução}
 
-Com base no GQM (Goal, Question, Metric) que é um padrão e modelo de medição baseado em questionamentos,e no artigo ~\cite{borges2003modelo}, definimos as seções desse documento. O GQM define um modelo de medição que segue em 3 níveis: Objetivos, pergunts e por fim, métricas. Os seus passos ajudam a levantar esses níveis de medições em etapas, para facilitar o levantamento de métricas e indicadores.
+Medição e Análise é uma área muito importante do ambiente computacional, talvez a mais importante por lidar com a parte do cálculo de investimentos e custos dos softwares.
 
-\section{Contexto}
+ “Medição de software é uma avaliação quantitativa de qualquer aspecto dos processos e produtos de software, que permite seu melhor entendimento e, com
+isso, auxilia o planejamento, controle e melhoria do que se produz e de como é produzido"~\cite{rocha2012mediccao}
 
-Este documento é a formulação inicial de um processo de medição para analisar a qualidade dos requisitos gerados no contexto da disciplina de Engenharia de Requisitos ministrada na Universidade de Brasília - Campus Gama. 
-Na disciplina em questão é realizada a construção de um processo de engenharia de requisitos o qual envolve todos as atividades principais da Engenharia de Requisitos e a adesão de algumas atividades dos modelos de maturidade. A aderência aos modelos de maturidade pode ser benéfica se for adequada corretamente ao processo elaborado. 
-Como resultado é esperado que os requisitos construídos possuam mais qualidade, pois foram seguidas atividades que têm como objetivo garantir o sucesso no processo de elicitação.
-Sob essa perspectiva, é interessante buscar medidas que relacionem a qualidade dos requisitos elicitados pela equipe com a aderência às atividades dos modelos de maturidade.
+Apesar do conceito, o grupo visa medir a qualidade do processo de engenharia de requisitos com base na aderência aos modelos de maturidade.
 
-\section{Formulação do problema}
+Segundo o autor Albuquerque, A melhoria de processos de software pode estar relacionada a: (i) galgar
+níveis mais altos de maturidade (melhoria vertical)e/ou (ii) realizar mudanças visando a uma maior adequação às necessidades da organização ou melhorias no
+desempenho dos processos (melhoria horizontal).\cite{albuquerque2008avaliaccao}
 
-O processo de engenharia de requisitos é composto por 5 atividades principais Elicitação, Análise e negociação, Documentação e Verificação e Validação e Gerência de requisitos, e todas essas atividades possuem tópicos dentro dos modelos de maturidade, seja CMMI ou MPSBr, e dentro destes, possuem diversos níveis de aprofundamento.
-	
-Entretanto, o processo de requisitos pode não conter todas as atividades estabelecidas nos modelos de maturidade por questões diversas como: custos, prazos para construção do produto de software e maturidade da equipe. 
+Nos dois casos, a melhoria dos
+processos deve estar associada a objetivos de melhoria que visam principalmente:
+(i) entender as características dos processos existentes e os fatores que afetam o
+seu desempenho; (ii) planejar e implementar ações que modifiquem o processo
+para atender melhor às necessidades de negócio; e (iii) avaliar os impactos e os
+benefícios obtidos com as mudanças realizadas nos processos.\cite{albuquerque2008avaliaccao}
 
-Com base nessa premissa, podemos definir objetivos de medição e elaborar questões a serem respondidas com base nas análises das métricas coletadas ao longo do processo de medição. As respostas dessas questões darão suporte para que a equipe de medição relacione o processo de requisitos com os modelos de maturidade.
-
-Este relacionamento dará suporte à todo o trabalho, ou seja, o quão aderido está o modelo de maturidade ao processo da equipe responsável pelo desenvolvimento do processo de engenharia de requisitos.
- 
+Após estudar a técnica de Medição chamada GQM, e após propor o plano deste, a equipe referente a este relatório iniciou a confecção do que havia sido planejado.
